-- The name of the package.
name:                SeamCarving

version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE

author:              M.Magomedov

maintainer:          mmagomedoff@gmail.com

category:            Image.Processing

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10

library
  exposed-modules:     Image.Processing.SeamCarving
  build-depends:       base >=4.6 && <4.7, array
  hs-source-dirs:      src
  default-language:    Haskell2010

executable carver
  hs-source-dirs:      carver
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, SeamCarving, Codec-Image-DevIL
  default-language:    Haskell2010
